--- a/reporting_and_data_analysis/views/menu.xml
+++ b/reporting_and_data_analysis/views/menu.xml
@@ -1,33 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Menu chính -->
+    <!-- Menu chính cho Quản lý Y tế -->
+    <menuitem id="menu_hospital_root" name="Quản lý Y tế" sequence="10"/>
+
+    <!-- Menu báo cáo thống kê -->
     <menuitem id="menu_clinic_dashboard_root"
               name="Báo cáo thống kê"
-              sequence="50"/>
+              parent="menu_hospital_root"
+              sequence="40"/>
 
-    <!-- Menu cho dashboard -->
+    <!-- Dashboard tổng quát -->
     <menuitem id="menu_clinic_dashboard"
-              name="Bảng điều khiển"
+              name="Bảng điều khiển tổng quát"
               parent="menu_clinic_dashboard_root"
               action="action_clinic_dashboard_wizard"
               sequence="10"/>
 
-    <!-- Menu cho các biểu đồ chi tiết -->
+    <!-- Các biểu đồ phân tích chi tiết -->
+    <menuitem id="menu_clinic_analytics"
+              name="Phân tích chi tiết"
+              parent="menu_clinic_dashboard_root"
+              sequence="20"/>
+
     <menuitem id="menu_clinic_service_dashboard"
               name="Thống kê dịch vụ"
-              parent="menu_clinic_dashboard_root"
+              parent="menu_clinic_analytics"
               action="action_clinic_service_dashboard"
-              sequence="20"/>
+              sequence="10"/>
 
     <menuitem id="menu_clinic_product_dashboard"
               name="Thống kê thuốc"
-              parent="menu_clinic_dashboard_root"
+              parent="menu_clinic_analytics"
               action="action_clinic_product_dashboard"
-              sequence="30"/>
+              sequence="20"/>
 
     <menuitem id="menu_clinic_patient_dashboard"
               name="Thống kê bệnh nhân"
-              parent="menu_clinic_dashboard_root"
+              parent="menu_clinic_analytics"
               action="action_clinic_patient_dashboard"
-              sequence="40"/>
+              sequence="30"/>
+
+    <!-- Báo cáo y tế -->
+    <menuitem id="menu_hospital_reports"
+              name="Báo cáo y tế"
+              parent="menu_hospital_root"
+              sequence="50"/>
+
+    <menuitem id="menu_hospital_medical_report_wizard"
+              name="Tạo báo cáo mới"
+              parent="menu_hospital_reports"
+              action="action_hospital_medical_report_wizard"
+              sequence="10"/>
+
+    <menuitem id="menu_hospital_medical_reports"
+              name="Danh sách báo cáo"
+              parent="menu_hospital_reports"
+              action="action_hospital_medical_report"
+              sequence="20"/>
 </odoo>
