--- a/healthcare_management/views/appointment_reminder_views.xml
+++ b/healthcare_management/views/appointment_reminder_views.xml
@@ -11,8 +11,6 @@
                             class="oe_highlight" invisible="state not in ['to_send', 'failed']"/>
                     <button name="action_cancel_reminder" string="Hủy thông báo" type="object"
                             invisible="state not in ['to_send', 'failed']"/>
-                    <button name="action_sync_all_appointments" string="Đồng bộ tất cả lịch hẹn" type="object"
-                            class="btn-secondary" groups="base.group_system"/>
                     <field name="state" widget="statusbar" statusbar_visible="to_send,sent,failed,cancelled"/>
                 </header>
                 <sheet>
@@ -41,7 +39,7 @@
         </field>
     </record>
 
-    <!-- Tree View -->
+    <!-- Tree View với nút đồng bộ ở phần trên -->
     <record id="view_appointment_reminder_tree" model="ir.ui.view">
         <field name="name">appointment.reminder.tree</field>
         <field name="model">appointment.reminder</field>
@@ -53,6 +51,8 @@
                 <field name="appointment_date"/>
                 <field name="notification_date"/>
                 <field name="state"/>
+                <button name="action_sync_all_appointments" string="Đồng bộ tất cả lịch hẹn"
+                            type="object" class="btn-primary"/>
             </list>
         </field>
     </record>
@@ -82,14 +82,17 @@
         </field>
     </record>
 
+    <!-- Action Server -->
     <record id="action_sync_all_appointments" model="ir.actions.server">
         <field name="name">Đồng bộ tất cả lịch hẹn</field>
         <field name="model_id" ref="model_appointment_reminder"/>
         <field name="binding_model_id" ref="model_appointment_reminder"/>
+        <field name="binding_view_types">list,form</field>
         <field name="state">code</field>
         <field name="code">action = model.action_sync_all_appointments()</field>
     </record>
 
+    <!-- Action Window -->
     <record id="action_appointment_reminder" model="ir.actions.act_window">
         <field name="name">Thông báo lịch hẹn</field>
         <field name="res_model">appointment.reminder</field>
